tracking.py: add option to load previous tracking results (#3)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -108,6 +108,9 @@
         "- `detections.pkl` - the initial detections in [Python's pickle\n",
         "  format](https://docs.python.org/3/library/pickle.html).\n",
         "\n",
+        "- `tracks.pkl` - the detected tracks in [Python's pickle\n",
+        "  format](https://docs.python.org/3/library/pickle.html).\n",
+        "\n",
         "- `results-via-project.json` - the final detections as a\n",
         "  [VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) project.  This\n",
         "  requires the images in the `frames` directory.\n",
@@ -445,6 +448,7 @@
         "\n",
         "FRAMES_DIR = os.path.join(RESULTS_DIRECTORY, 'frames')\n",
         "DETECTIONS_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections.pkl')\n",
+        "TRACKS_PKL_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.pkl')\n",
         "VIA_PROJECT_FPATH = os.path.join(RESULTS_DIRECTORY, 'results-via-project.json')\n",
         "CSV_FPATH = os.path.join(RESULTS_DIRECTORY, 'results.csv')\n",
         "TRACKS_VIDEO_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.mp4')\n",
@@ -954,7 +958,17 @@
         "id": "FN5FGZxJFHU3"
       },
       "source": [
-        "## 5 - Tracking step\n"
+        "## 5 - Tracking step\n",
+        "\n",
+        "The final step in the pipeline is to track the detected chimpanzees\n",
+        "in the video.  At the end of this step, the tracking results will be\n",
+        "saved in a CSV file and as a\n",
+        "[VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) project.\n",
+        "\n",
+        "If you have previously run the tracking step then you will have a\n",
+        "`tracks.pkl` file in the results directory.  If so, skip the\n",
+        "\"tracking\" cell and run the \"load previous tracking results\" cell\n",
+        "instead."
       ]
     },
     {
@@ -966,11 +980,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown The final step in the pipeline is to track the detected\n",
-        "#@markdown chimpanzees in the video.  At the end of this step, the\n",
-        "#@markdown tracking results will be saved in a CSV file and as a\n",
-        "#@markdown [VIA](https://www.robots.ox.ac.uk/~vgg/software/via/)\n",
-        "#@markdown project.\n",
+        "#@markdown ### 4.1 - Run tracking (option 1)\n",
         "\n",
         "svt_detections = track(\n",
         "    detections,\n",
@@ -991,7 +1001,38 @@
         "    VIA_PROJECT_FPATH,\n",
         "    config={'frame_img_dir': FRAMES_DIR, 'via_project_name': ''},\n",
         ")\n",
-        "svt_detections.export_plain_csv(CSV_FPATH, {})"
+        "svt_detections.export_plain_csv(CSV_FPATH, {})\n",
+        "\n",
+        "with open(TRACKS_PKL_FPATH, 'wb') as fh:\n",
+        "    pickle.dump(\n",
+        "        {\n",
+        "            'svt_detections': svt_detections,\n",
+        "            'frame_id_to_filename': frame_id_to_filename,\n",
+        "        },\n",
+        "        fh,\n",
+        "    )\n",
+        "_logger.info('Tracking results saved to \\'%s\\'', DETECTIONS_FPATH)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "_TQC37GrNTFw"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ### 4.2 - Load previous tracking results (option 2)\n",
+        "\n",
+        "with open(TRACKS_PKL_FPATH, 'rb') as fh:\n",
+        "    loaded_tracks = pickle.load(fh)\n",
+        "\n",
+        "svt_detections = loaded_tracks['svt_detections']\n",
+        "frame_id_to_filename = loaded_tracks['frame_id_to_filename']\n",
+        "video_frames = list(frame_id_to_filename.values())\n",
+        "\n",
+        "_logger.info('Tracking results loaded from \\'%s\\'', TRACKS_PKL_FPATH)"
       ]
     },
     {
