tracking.py: rename some variables for clarity.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -447,10 +447,10 @@
         "logging.getLogger().setLevel(LOG_LEVEL)\n",
         "\n",
         "FRAMES_DIR = os.path.join(RESULTS_DIRECTORY, 'frames')\n",
-        "DETECTIONS_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections.pkl')\n",
+        "DETECTIONS_PKL_FPATH = os.path.join(RESULTS_DIRECTORY, 'detections.pkl')\n",
         "TRACKS_PKL_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.pkl')\n",
-        "VIA_PROJECT_FPATH = os.path.join(RESULTS_DIRECTORY, 'results-via-project.json')\n",
-        "CSV_FPATH = os.path.join(RESULTS_DIRECTORY, 'results.csv')\n",
+        "RESULTS_VIA_FPATH = os.path.join(RESULTS_DIRECTORY, 'results-via-project.json')\n",
+        "RESULTS_CSV_FPATH = os.path.join(RESULTS_DIRECTORY, 'results.csv')\n",
         "TRACKS_VIDEO_FPATH = os.path.join(RESULTS_DIRECTORY, 'tracks.mp4')\n",
         "\n",
         "\n",
@@ -659,7 +659,7 @@
         "        'via_project_name': VIDEO_FILE,\n",
         "    }\n",
         "\n",
-        "    # We only use one shot, hence only shot_id 0.\n",
+        "    # We expect videos to be of a single shot, hence only shot_id 0.\n",
         "    # XXX: Why are we using strings for int keys?\n",
         "    shot_id = '0'\n",
         "    detections4svt = {shot_id: {x: {} for x in frame_id_to_filename.keys()}}\n",
@@ -920,7 +920,7 @@
         "    DETECTION_THRESHOLD,\n",
         ")\n",
         "\n",
-        "with open(DETECTIONS_FPATH, 'wb') as fh:\n",
+        "with open(DETECTIONS_PKL_FPATH, 'wb') as fh:\n",
         "    pickle.dump(\n",
         "        {\n",
         "            'detections': detections,\n",
@@ -928,7 +928,7 @@
         "        },\n",
         "        fh,\n",
         "    )\n",
-        "_logger.info('Detection results saved to \\'%s\\'', DETECTIONS_FPATH)"
+        "_logger.info('Detection results saved to \\'%s\\'', DETECTIONS_PKL_FPATH)"
       ]
     },
     {
@@ -942,14 +942,14 @@
       "source": [
         "#@markdown ### 4.2 - Load previous detection results (option 2)\n",
         "\n",
-        "with open(DETECTIONS_FPATH, 'rb') as fh:\n",
+        "with open(DETECTIONS_PKL_FPATH, 'rb') as fh:\n",
         "    loaded_detections = pickle.load(fh)\n",
         "\n",
         "detections = loaded_detections['detections']\n",
         "frame_id_to_filename = loaded_detections['frame_id_to_filename']\n",
         "video_frames = list(frame_id_to_filename.values())\n",
         "\n",
-        "_logger.info('Detection results loaded from \\'%s\\'', DETECTIONS_FPATH)"
+        "_logger.info('Detection results loaded from \\'%s\\'', DETECTIONS_PKL_FPATH)"
       ]
     },
     {
@@ -982,7 +982,7 @@
       "source": [
         "#@markdown ### 4.1 - Run tracking (option 1)\n",
         "\n",
-        "svt_detections = track(\n",
+        "tracks = track(\n",
         "    detections,\n",
         "    frame_id_to_filename,\n",
         "    TRACKING_MODEL_PATH,\n",
@@ -992,26 +992,26 @@
         "# exported VIA project we want to use the filename only so that the\n",
         "# images can be found by setting the project \"Default Path\".  This\n",
         "# hack changes the filepath in the SVT internals.\n",
-        "svt_detections.frame_id_to_filename_map = {\n",
+        "tracks.frame_id_to_filename_map = {\n",
         "    k: os.path.basename(v)\n",
-        "    for k, v in svt_detections.frame_id_to_filename_map.items()\n",
+        "    for k, v in tracks.frame_id_to_filename_map.items()\n",
         "}\n",
         "\n",
-        "svt_detections.export_via_project(\n",
-        "    VIA_PROJECT_FPATH,\n",
+        "tracks.export_via_project(\n",
+        "    RESULTS_VIA_FPATH,\n",
         "    config={'frame_img_dir': FRAMES_DIR, 'via_project_name': ''},\n",
         ")\n",
-        "svt_detections.export_plain_csv(CSV_FPATH, {})\n",
+        "tracks.export_plain_csv(RESULTS_CSV_FPATH, {})\n",
         "\n",
         "with open(TRACKS_PKL_FPATH, 'wb') as fh:\n",
         "    pickle.dump(\n",
         "        {\n",
-        "            'svt_detections': svt_detections,\n",
+        "            'tracks': tracks,\n",
         "            'frame_id_to_filename': frame_id_to_filename,\n",
         "        },\n",
         "        fh,\n",
         "    )\n",
-        "_logger.info('Tracking results saved to \\'%s\\'', DETECTIONS_FPATH)"
+        "_logger.info('Tracking results saved to \\'%s\\'', TRACKS_PKL_FPATH)"
       ]
     },
     {
@@ -1028,7 +1028,7 @@
         "with open(TRACKS_PKL_FPATH, 'rb') as fh:\n",
         "    loaded_tracks = pickle.load(fh)\n",
         "\n",
-        "svt_detections = loaded_tracks['svt_detections']\n",
+        "tracks = loaded_tracks['tracks']\n",
         "frame_id_to_filename = loaded_tracks['frame_id_to_filename']\n",
         "video_frames = list(frame_id_to_filename.values())\n",
         "\n",
@@ -1074,7 +1074,7 @@
         "#@markdown is released.  Expect a couple of seconds wait for the frame\n",
         "#@markdown to be updated.\n",
         "\n",
-        "display_detections(frame_id_to_filename, svt_detections.detection_data['0'])"
+        "display_detections(frame_id_to_filename, tracks.detection_data['0'])"
       ]
     },
     {
@@ -1145,7 +1145,7 @@
         "\n",
         "with tempfile.TemporaryDirectory() as out_frames_dir:\n",
         "    tmp_tracks_fpath = os.path.join(out_frames_dir, 'tracks.mp4')\n",
-        "    make_frames_with_tracks(CSV_FPATH, FRAMES_DIR, out_frames_dir)\n",
+        "    make_frames_with_tracks(RESULTS_CSV_FPATH, FRAMES_DIR, out_frames_dir)\n",
         "    ffmpeg_video_from_frames_and_video(\n",
         "        out_frames_dir, VIDEO_FILE, tmp_tracks_fpath\n",
         "    )\n",
