tracking.py: add dropdown menu to select detector (and add chimpanzee bodies)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -332,6 +332,12 @@
         "\n",
         "VIDEO_FILE = ''  #@param {type:\"string\"}\n",
         "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n",
+        "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\"]\n",
+        "\n",
+        "THING_TO_MODEL_CONFIG = {\n",
+        "    \"Chimpanzee faces\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml\",\n",
+        "    \"Chimpanzee bodies\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-imdb_5k_sup.yaml\",\n",
+        "}\n",
         "\n",
         "if not VIDEO_FILE:\n",
         "    raise Exception('VIDEO_FILE is empty, you must set it.')\n",
@@ -342,6 +348,11 @@
         "if not os.path.isdir(RESULTS_DIRECTORY):\n",
         "    raise Exception(\n",
         "        'The RESULTS_DIRECTORY \\'%s\\' does not exist' % RESULTS_DIRECTORY\n",
+        "    )\n",
+        "if THING_TO_TRACK not in THING_TO_MODEL_CONFIG:\n",
+        "    raise Exception(\n",
+        "        'THING_TO_TRACK \\'%s\\' has no pre-configuration \\'%s\\''\n",
+        "        % (THING_TO_TRACK, list(THING_TO_MODEL_CONFIG.keys()))\n",
         "    )"
       ]
     },
@@ -379,7 +390,14 @@
         "#@markdown models.  This variable is the URL, or file path, for a\n",
         "#@markdown detectron2 model configuration (the URI and file path for\n",
         "#@markdown the model weights are specified in the config file).\n",
-        "DETECTION_MODEL_CONFIG = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml'  #@param {type: \"string\"}\n",
+        "#@markdown\n",
+        "\n",
+        "#@markdown Leave this empty to use the pre-configured model to detect\n",
+        "#@markdown the `THING_TO_TRACK` choosen in Section 2.4.\n",
+        "\n",
+        "DETECTION_MODEL_CONFIG = ''  #@param {type: \"string\"}\n",
+        "if not DETECTION_MODEL_CONFIG:\n",
+        "    DETECTION_MODEL_CONFIG = THING_TO_MODEL_CONFIG[THING_TO_TRACK]\n",
         "\n",
         "#@markdown When the model detects a face or body, that detection is\n",
         "#@markdown made with a confidence score.  Detections with a confidence\n",
@@ -409,7 +427,7 @@
         "#@markdown You will also specify a path in your Google Drive.\n",
         "TRACKING_MODEL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth'  #@param {type: \"string\"}\n",
         "\n",
-        "MATCH_OVERLAP_THRESHOLD = 0.6 #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
+        "MATCH_OVERLAP_THRESHOLD = 0.6  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
         "\n",
         "UNKNOWN_TRACK_ID_MARKER = -1"
       ]
