tracking.py: add support for detectors with multiple classes.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -335,8 +335,14 @@
         "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\"]\n",
         "\n",
         "THING_TO_MODEL_CONFIG = {\n",
-        "    \"Chimpanzee faces\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml\",\n",
-        "    \"Chimpanzee bodies\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-imdb_5k_sup.yaml\",\n",
+        "    \"Chimpanzee faces\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml\",\n",
+        "        \"class-idx\" : 0,\n",
+        "    },\n",
+        "    \"Chimpanzee bodies\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-imdb_5k_sup.yaml\",\n",
+        "        \"class-idx\" : 0,\n",
+        "    },\n",
         "}\n",
         "\n",
         "if not VIDEO_FILE:\n",
@@ -396,8 +402,10 @@
         "#@markdown the `THING_TO_TRACK` choosen in Section 2.4.\n",
         "\n",
         "DETECTION_MODEL_CONFIG = ''  #@param {type: \"string\"}\n",
+        "DETECTION_CLASS_IDX = 0\n",
         "if not DETECTION_MODEL_CONFIG:\n",
-        "    DETECTION_MODEL_CONFIG = THING_TO_MODEL_CONFIG[THING_TO_TRACK]\n",
+        "    DETECTION_MODEL_CONFIG = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"config-url\"]\n",
+        "    DETECTION_CLASS_IDX = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"class-idx\"]\n",
         "\n",
         "#@markdown When the model detects a face or body, that detection is\n",
         "#@markdown made with a confidence score.  Detections with a confidence\n",
@@ -608,6 +616,7 @@
         "def detect(\n",
         "    video_frames: List[str],\n",
         "    detection_model_config_path: str,\n",
+        "    class_idx: int,\n",
         "    visual_threshold: float,\n",
         "):\n",
         "    if visual_threshold < 0.0 or visual_threshold > 1.0:\n",
@@ -642,8 +651,9 @@
         "        # Acquire image\n",
         "        img = cv2.imread(frame_fpath)\n",
         "        outputs = predictor(img)\n",
+        "        bboxes = outputs['instances'].pred_boxes[outputs['instances'].pred_classes == class_idx]\n",
         "\n",
-        "        for i, bbox in enumerate(outputs['instances'].get('pred_boxes')):\n",
+        "        for i, bbox in enumerate(bboxes):\n",
         "            frame_detections[frame_id][str(i)] = Detection(\n",
         "                track_id=UNKNOWN_TRACK_ID_MARKER,\n",
         "                x=float(bbox[0]),\n",
@@ -935,6 +945,7 @@
         "detections, frame_id_to_filename = detect(\n",
         "    video_frames,\n",
         "    DETECTION_MODEL_CONFIG_PATH,\n",
+        "    DETECTION_CLASS_IDX,\n",
         "    DETECTION_THRESHOLD,\n",
         ")\n",
         "\n",
