tracking.py: add detection for all animal classes in COCO2017.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -332,7 +332,7 @@
         "\n",
         "VIDEO_FILE = ''  #@param {type:\"string\"}\n",
         "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n",
-        "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\"]\n",
+        "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
         "\n",
         "THING_TO_MODEL_CONFIG = {\n",
         "    \"Chimpanzee faces\" : {\n",
@@ -342,6 +342,46 @@
         "    \"Chimpanzee bodies\" : {\n",
         "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-imdb_5k_sup.yaml\",\n",
         "        \"class-idx\" : 0,\n",
+        "    },\n",
+        "    \"Birds\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 14,\n",
+        "    },\n",
+        "    \"Cats\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 15,\n",
+        "    },\n",
+        "    \"Dogs\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 16,\n",
+        "    },\n",
+        "    \"Horses\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 17,\n",
+        "    },\n",
+        "    \"Sheep\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 18,\n",
+        "    },\n",
+        "    \"Cows\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 19,\n",
+        "    },\n",
+        "    \"Elephants\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 20,\n",
+        "    },\n",
+        "    \"Bears\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 21,\n",
+        "    },\n",
+        "    \"Zebras\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 22,\n",
+        "    },\n",
+        "    \"Giraffes\" : {\n",
+        "        \"config-url\" : \"https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-coco2017.yaml\",\n",
+        "        \"class-idx\" : 23,\n",
         "    },\n",
         "}\n",
         "\n",
