tracking.py: replace use of nvidia-smi when checking for GPUs.
Calling "nvidia-smi" in Colab and checking if the reply had failed
used to work.  However, it seems that now, if there is no GPU the
nvidia-smi command is not even available so it fails in a different
manner.  So replace this with torch.cuda.is_available().1~

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -192,16 +192,26 @@
         "#@markdown from the \"Hardware Accelerator\" menu.  Once you change it,\n",
         "#@markdown you need to run this cell again.\n",
         "\n",
-        "gpu_info = !nvidia-smi --list-gpus\n",
-        "gpu_info = '\\n'.join(gpu_info)\n",
-        "if gpu_info.find('failed') >= 0:\n",
-        "    USE_GPU = False\n",
-        "    print('You are NOT connected to a GPU.  This will run very slow.')\n",
-        "    print('Consider reconnecting to a runtime with GPU access.')\n",
-        "else:\n",
+        "import torch.cuda\n",
+        "\n",
+        "if torch.cuda.is_available():\n",
         "    USE_GPU = True\n",
-        "    print('You are connected to the following GPUs:')\n",
-        "    print(gpu_info)"
+        "    print(\"You are using this GPU:\")\n",
+        "    print(\n",
+        "        \"GPU %d: %s (%d GB)\"\n",
+        "        % (\n",
+        "            torch.cuda.current_device(),\n",
+        "            torch.cuda.get_device_name(),\n",
+        "            torch.cuda.get_device_properties(\n",
+        "                torch.cuda.current_device()\n",
+        "            ).total_memory\n",
+        "            * 1e-9,\n",
+        "        )\n",
+        "    )\n",
+        "else:\n",
+        "    USE_GPU = False\n",
+        "    print(\"You are NOT connected to a GPU.  This will run very slow.\")\n",
+        "    print(\"Consider reconnecting to a runtime with GPU access.\")"
       ]
     },
     {
@@ -253,7 +263,6 @@
         "import requests\n",
         "import torch\n",
         "import torch.backends.cudnn as cudnn\n",
-        "import torch.cuda\n",
         "from torch.autograd import Variable\n",
         "\n",
         "logging.basicConfig()\n",
