--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -676,6 +676,7 @@
         "    d2_cfg = detectron2.config.get_cfg()\n",
         "    d2_cfg.merge_from_file(detection_model_config_path)\n",
         "    d2_cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = visual_threshold\n",
+        "    d2_cfg.MODEL.DEVICE = DEFAULT_DEVICE\n",
         "\n",
         "    predictor = detectron2.engine.DefaultPredictor(d2_cfg)\n",
         "    _logger.info('Finished loading model %s', detection_model_config_path)\n",
