Rename project from 'Chimpanzee Tracking' to 'Follow Things Around'

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -6,7 +6,7 @@
         "id": "AR4oetmCFHUa"
       },
       "source": [
-        "# VGG Chimpanzee Tracking\n",
+        "# VGG Follow Things Around\n",
         "\n",
         "This project provides an interface to track chimpanzees in the wild.\n",
         "It will detect the chimpanzees in video files.  It is based in the\n",
@@ -33,7 +33,7 @@
         "chimpanzees in the wild and was designed to run in [Google\n",
         "Colab](https://colab.research.google.com/).  If you are not reading\n",
         "this notebook in Google Colab, click\n",
-        "[here](https://colab.research.google.com/github/ox-vgg/chimpanzee-tracking/blob/main/tracking.ipynb).\n"
+        "[here](https://colab.research.google.com/github/ox-vgg/follow-things-around/blob/main/tracking.ipynb).\n"
       ]
     },
     {
@@ -637,7 +637,7 @@
         "            '-pattern_type', 'glob',\n",
         "            '-i', os.path.join(frames_dir, '*.jpg'),\n",
         "            '-i', in_video_fpath,\n",
-        "            '-c:a', 'aac',  # https://github.com/ox-vgg/chimpanzee-tracking/issues/1\n",
+        "            '-c:a', 'aac',  # https://github.com/ox-vgg/follow-things-around/issues/1\n",
         "            '-c:v', 'libx264',\n",
         "            '-map', '0:v:0',  # use video from input 0 / stream 0\n",
         "            '-map', '1:a:0',  # use audio from input 1 / stream 0\n",
