--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -479,7 +479,9 @@
         "#@markdown You will also specify a path in your Google Drive.\n",
         "TRACKING_MODEL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth'  #@param {type: \"string\"}\n",
         "\n",
-        "MATCH_OVERLAP_THRESHOLD = 0.6  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
+        "MATCH_OVERLAP_THRESHOLD = 0.2  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
+        "\n",
+        "NONMATCH_TRACKING_THRESHOLD = 0.9  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
         "\n",
         "UNKNOWN_TRACK_ID_MARKER = -1"
       ]
@@ -563,6 +565,7 @@
         "follow_things_around.DEFAULT_DEVICE = DEFAULT_DEVICE\n",
         "follow_things_around.FRAMES_DIR = FRAMES_DIR\n",
         "follow_things_around.MATCH_OVERLAP_THRESHOLD = MATCH_OVERLAP_THRESHOLD\n",
+        "follow_things_around.NONMATCH_TRACKING_THRESHOLD = NONMATCH_TRACKING_THRESHOLD\n",
         "follow_things_around.UNKNOWN_TRACK_ID_MARKER = UNKNOWN_TRACK_ID_MARKER\n",
         "follow_things_around.USE_GPU = USE_GPU\n",
         "follow_things_around.VIDEO_FILE = VIDEO_FILE\n",
