tracking.py: rewrite text now that we support more than just chimpanzee faces.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -8,17 +8,18 @@
       "source": [
         "# VGG Follow Things Around\n",
         "\n",
-        "This project provides an interface to track chimpanzees in the wild.\n",
-        "It will detect the chimpanzees in video files.  It is based in the\n",
-        "following projects:\n",
+        "Follow Things Around is a program to detect and track multiple\n",
+        "objects in videos.  We currently support the tracking of chimpanzee\n",
+        "faces, birds, cats, dogs, horses, sheep, cows, elephants, bears,\n",
+        "zebras, and giraffes and are expanding the list of things that it\n",
+        "can track.  Please contact us at if you are interested in tracking\n",
+        "other things.\n",
         "\n",
-        "- [Count, Crop and Recognise: Fine-Grained Recognition in the\n",
-        "  Wild](https://www.robots.ox.ac.uk/~vgg/research/ccr/) -\n",
-        "  [[paper]](http://www.robots.ox.ac.uk/~vgg/publications/2019/Bain19/bain19.pdf)\n",
-        "\n",
-        "- [Chimpanzee face recognition from videos in the wild using deep\n",
-        "  learning](https://www.robots.ox.ac.uk/~vgg/research/ChimpanzeeFaces/) -\n",
-        "  [[paper]](https://advances.sciencemag.org/content/advances/5/9/eaaw0736.full.pdf)\n"
+        "Follow Things Around works by performing a two-step approach named\n",
+        "\"tracking by detection\".  First, it detect the \"things\" of interest\n",
+        "in all frames of a video and then, it tracks those detections\n",
+        "merging them into individual tracks and filling in gaps from the\n",
+        "detector."
       ]
     },
     {
@@ -29,8 +30,9 @@
       "source": [
         "## 1 - Read Me First\n",
         "\n",
-        "This project is a [Jupyter](https://jupyter.org/) notebook to track\n",
-        "chimpanzees in the wild and was designed to run in [Google\n",
+        "This project is a [Jupyter](https://jupyter.org/) notebook to\n",
+        "perform tracking by detection of multiple objects in videos and was\n",
+        "designed to run in [Google\n",
         "Colab](https://colab.research.google.com/).  If you are not reading\n",
         "this notebook in Google Colab, click\n",
         "[here](https://colab.research.google.com/github/ox-vgg/follow-things-around/blob/main/tracking.ipynb).\n"
@@ -85,9 +87,11 @@
         "### 1.3 - Testing this notebook\n",
         "\n",
         "We recommend you first test this notebook with a short video, less\n",
-        "than 20 seconds long.  Try our own sample video (download it\n",
-        "[here](https://thor.robots.ox.ac.uk/software/chimpanzee-tracking/test-data/19-mini.mp4)),\n",
-        "and then a video fragment of your own videos."
+        "than 20 seconds long.  First, try our own sample video to track\n",
+        "chimpanzee faces (download it\n",
+        "[here](https://thor.robots.ox.ac.uk/software/chimpanzee-tracking/test-data/19-mini.mp4)).\n",
+        "Then try a video fragment of your own video.  Finally, run it on\n",
+        "your full video."
       ]
     },
     {
@@ -98,12 +102,12 @@
       "source": [
         "### 1.4 - Results files\n",
         "\n",
-        "This notebook will save all the results in a single directory.  It\n",
-        "will generate the following files:\n",
+        "This notebook will save all results for a single video in one\n",
+        "directory.  It will generate the following files:\n",
         "\n",
         "- `frames` - a directory with the individual video frames.  You may\n",
         "  want to delete them after validating the results.  They take up a\n",
-        "  lot of space and can be regenerated later\n",
+        "  lot of space and can be regenerated later.\n",
         "\n",
         "- `detections.pkl` - the initial detections in [Python's pickle\n",
         "  format](https://docs.python.org/3/library/pickle.html).\n",
@@ -119,8 +123,9 @@
         "\n",
         "- `tracks.mp4` - video with tracks (see Section 6).\n",
         "\n",
-        "Note that none of those files includes the video filename.  As such,\n",
-        "our recommendation is to create a results directory for each video.\n"
+        "Note that none of those files includes the input video filename.\n",
+        "Our recommendation is to create separate results directory for each\n",
+        "video.\n"
       ]
     },
     {
@@ -151,11 +156,15 @@
         "### 1.6 - Moving forward\n",
         "\n",
         "You can run this notebook on Google Colab but if you have a large\n",
-        "collection of videos or if your videos are particularly long, you may\n",
-        "use up all of your Colab resources.  It may be worth running this on\n",
-        "your own computers.  Contact us if you need help to do that.\n",
-        "Alternatively, you purchase additional \"compute units\" with [Google\n",
-        "Colab Plans](https://colab.research.google.com/signup).\n"
+        "collection of videos or if your videos are particularly long or have\n",
+        "a high number of objects to track, you may end up using up all of\n",
+        "your free Colab resources.\n",
+        "\n",
+        "Once you've tested Follow Things Around with a few of your videos,\n",
+        "it may be worth running this on your own computers.  Contact us if\n",
+        "you need help to do that.  Alternatively, you can purchase\n",
+        "additional \"compute units\" with [Google Colab\n",
+        "Plans](https://colab.research.google.com/signup).\n"
       ]
     },
     {
@@ -246,13 +255,16 @@
         "\n",
         "# The SVT package\n",
         "# https://www.robots.ox.ac.uk/~vgg/projects/seebibyte/software/svt/\n",
+        "print(\"Installing SVT\")\n",
         "!pip install --quiet git+https://gitlab.com/vgg/svt/ > /dev/null\n",
         "\n",
         "# The Detectron2 package\n",
         "# https://github.com/facebookresearch/detectron2/\n",
+        "print(\"Installing detectron2 (this will take a few minutes to finish)\")\n",
         "!pip install --quiet git+https://github.com/facebookresearch/detectron2.git > /dev/null\n",
         "\n",
         "# Finally, Follow-Things-Around\n",
+        "print(\"Installing Follow-Things-Around\")\n",
         "!pip install --quiet git+https://github.com/ox-vgg/follow-things-around.git\n",
         "\n",
         "import glob\n",
@@ -313,10 +325,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lb_oICb3CPpC"
+        "id": "Elhia5LHRFZf"
       },
       "source": [
-        "### 2.4 - Video file and results folder\n"
+        "### 2.4 - Select \"thing\" to track\n"
       ]
     },
     {
@@ -324,18 +336,19 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "Gk90XC-8FHUs"
+        "id": "WFYckNS4Ztud"
       },
       "outputs": [],
       "source": [
-        "#@markdown To find the correct path, open the \"Files\" menu in the left\n",
-        "#@markdown sidebar.  The `drive` directory contains your Google Drive\n",
-        "#@markdown files.  Navigate the files, right click on the wanted file\n",
-        "#@markdown or directory, and select \"Copy path\".  Then paste the path\n",
-        "#@markdown in this form.  Do not forget to then \"run\" this cell.\n",
+        "#@markdown A model trained on the \"thing\" of interest is required.  We\n",
+        "#@markdown currently have models for these things but it is possible\n",
+        "#@markdown to train new ones.  Please contact us if you require a\n",
+        "#@markdown detector for something else or if you require to fine-tune\n",
+        "#@markdown them.\n",
+        "#@markdown\n",
+        "#@markdown Do not forget to \"run\" this cell after making your\n",
+        "#@markdown selection.\n",
         "\n",
-        "VIDEO_FILE = ''  #@param {type:\"string\"}\n",
-        "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n",
         "THING_TO_TRACK = 'Chimpanzee faces'  #@param [\"Chimpanzee faces\", \"Chimpanzee bodies\", \"Birds\", \"Cats\", \"Dogs\", \"Horses\", \"Sheep\", \"Cows\", \"Elephants\", \"Bears\", \"Zebras\", \"Giraffes\"]\n",
         "\n",
         "THING_TO_MODEL_CONFIG = {\n",
@@ -389,16 +402,6 @@
         "    },\n",
         "}\n",
         "\n",
-        "if not VIDEO_FILE:\n",
-        "    raise Exception('VIDEO_FILE is empty, you must set it.')\n",
-        "if not RESULTS_DIRECTORY:\n",
-        "    raise Exception('RESULTS_DIRECTORY is empty, you must set it.')\n",
-        "if not os.path.isfile(VIDEO_FILE):\n",
-        "    raise Exception('The VIDEO_FILE \\'%s\\' does not exist' % VIDEO_FILE)\n",
-        "if not os.path.isdir(RESULTS_DIRECTORY):\n",
-        "    raise Exception(\n",
-        "        'The RESULTS_DIRECTORY \\'%s\\' does not exist' % RESULTS_DIRECTORY\n",
-        "    )\n",
         "if THING_TO_TRACK not in THING_TO_MODEL_CONFIG:\n",
         "    raise Exception(\n",
         "        'THING_TO_TRACK \\'%s\\' has no pre-configuration \\'%s\\''\n",
@@ -409,10 +412,49 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "lb_oICb3CPpC"
+      },
+      "source": [
+        "### 2.5 - Video file and results folder\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "Gk90XC-8FHUs"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown To find the correct path, open the \"Files\" menu in the left\n",
+        "#@markdown sidebar.  The `drive` directory contains your Google Drive\n",
+        "#@markdown files.  Navigate the files, right click on the wanted file\n",
+        "#@markdown or directory, and select \"Copy path\".  Then paste the path\n",
+        "#@markdown in this form.  Do not forget to then \"run\" this cell.\n",
+        "\n",
+        "VIDEO_FILE = ''  #@param {type:\"string\"}\n",
+        "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n",
+        "\n",
+        "if not VIDEO_FILE:\n",
+        "    raise Exception('VIDEO_FILE is empty, you must set it.')\n",
+        "if not RESULTS_DIRECTORY:\n",
+        "    raise Exception('RESULTS_DIRECTORY is empty, you must set it.')\n",
+        "if not os.path.isfile(VIDEO_FILE):\n",
+        "    raise Exception('The VIDEO_FILE \\'%s\\' does not exist' % VIDEO_FILE)\n",
+        "if not os.path.isdir(RESULTS_DIRECTORY):\n",
+        "    raise Exception(\n",
+        "        'The RESULTS_DIRECTORY \\'%s\\' does not exist' % RESULTS_DIRECTORY\n",
+        "    )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7c1gbeVrFHUu"
       },
       "source": [
-        "### 2.5 - Advanced options\n",
+        "### 2.6 - Advanced options\n",
         "\n",
         "The cells hidden in this section expose the advanced options for this\n",
         "pipeline and perform the final setup.  In most cases you do not need\n",
@@ -429,11 +471,11 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #### 2.5.1 - Chimpanzee detection\n",
+        "#@markdown #### 2.6.1 - Detection step\n",
         "\n",
         "#@markdown The detection step is the first step.  It detects the\n",
-        "#@markdown location of chimpanzees without attempting to identify who\n",
-        "#@markdown they are.\n",
+        "#@markdown location of the \"things\" of interest in all frames of the\n",
+        "#@markdown video.\n",
         "\n",
         "#@markdown A detection model is required.  You can either train\n",
         "#@markdown your own model, or you can use one of our pre-trained\n",
@@ -451,12 +493,14 @@
         "    DETECTION_MODEL_CONFIG = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"config-url\"]\n",
         "    DETECTION_CLASS_IDX = THING_TO_MODEL_CONFIG[THING_TO_TRACK][\"class-idx\"]\n",
         "\n",
-        "#@markdown When the model detects a face or body, that detection is\n",
+        "#@markdown When the model detects something, that detection is\n",
         "#@markdown made with a confidence score.  Detections with a confidence\n",
         "#@markdown score lower than the threshold are ignored.  If you set the\n",
-        "#@markdown threshold too high, you may loose some tracks but if you\n",
-        "#@markdown set it too low you may gain false tracks that need to be\n",
-        "#@markdown removed later.\n",
+        "#@markdown threshold too high, you may miss detections in some frames\n",
+        "#@markdown which need to be filled by the tracker..  If you set it too\n",
+        "#@markdown low, false detections will lead to false tracks that need\n",
+        "#@markdown to be manually removed later.\n",
+        "\n",
         "DETECTION_THRESHOLD = 0.6  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
       ]
     },
@@ -469,14 +513,16 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #### 2.5.2 - Chimpanzee tracking\n",
+        "#@markdown #### 2.6.2 - Tracking step\n",
         "\n",
-        "#@markdown The final step is to track the detected chimpanzees in the\n",
-        "#@markdown video.\n",
+        "#@markdown The final step is to merge the detections into individual\n",
+        "#@markdown tracks.\n",
         "\n",
-        "#@markdown You will need to provide a model.  We recommend you use\n",
-        "#@markdown [this one](https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth).\n",
-        "#@markdown You will also specify a path in your Google Drive.\n",
+        "#@markdown You will need to provide a model for the tracker.  We\n",
+        "#@markdown recommend you use [this\n",
+        "#@markdown one](https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth).\n",
+        "#@markdown Alternatively, you can also specify a path in your Google\n",
+        "#@markdown Drive.\n",
         "TRACKING_MODEL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/tracking-model-20181031_e45.pth'  #@param {type: \"string\"}\n",
         "\n",
         "MATCH_OVERLAP_THRESHOLD = 0.2  #@param {type:\"slider\", min:0.0, max:1.0, step:0.01}\n",
@@ -495,7 +541,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #### 2.5.3 - Verbosity\n",
+        "#@markdown #### 2.6.3 - Verbosity\n",
         "\n",
         "#@markdown How chatty do you want the notebook to be?  INFO is a good\n",
         "#@markdown choice if you want to have a feeling for progress.\n",
@@ -511,7 +557,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown #### 2.5.4 - The final setup step\n",
+        "#@markdown #### 2.6.4 - The final setup step\n",
         "\n",
         "#@markdown Run this cell to perform the final pipeline setup based on\n",
         "#@markdown the given options.\n",
@@ -623,11 +669,11 @@
       "source": [
         "## 4 - Detection step\n",
         "\n",
-        "The detection of chimpanzees is the first step in the pipeline.  If\n",
-        "you have previously run the detection step then you will have a `detections.pkl`\n",
-        "file in the results directory.  If so, skip the \"detection\" cell and\n",
-        "run the \"load previous detections results\" cell instead (you may need\n",
-        "to click in \"2 cells hidden\" to see them).\n"
+        "The detection of \"things\" is the first step in the pipeline.  If you\n",
+        "have previously run the detection step then you will have a\n",
+        "`detections.pkl` file in the results directory.  If so, skip the\n",
+        "\"Run detection\" cell (section 4.1) and run the \"Load previous\n",
+        "detections results\" cell instead (section 4.2).\n"
       ]
     },
     {
@@ -696,15 +742,15 @@
       "source": [
         "## 5 - Tracking step\n",
         "\n",
-        "The final step in the pipeline is to track the detected chimpanzees\n",
-        "in the video.  At the end of this step, the tracking results will be\n",
-        "saved in a CSV file and as a\n",
+        "The final step in the pipeline is to track the things detected in\n",
+        "the detection step.  At the end of this step, the tracking results\n",
+        "will be saved in a CSV file and as a\n",
         "[VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) project.\n",
         "\n",
         "If you have previously run the tracking step then you will have a\n",
-        "`tracks.pkl` file in the results directory.  If so, skip the\n",
-        "\"tracking\" cell and run the \"load previous tracking results\" cell\n",
-        "instead."
+        "`tracks.pkl` file in the results directory.  If so, skip the \"Run\n",
+        "tracking\" cell (section 5.1) and run the \"Load previous tracking\n",
+        "results\" cell instead (section 5.2)."
       ]
     },
     {
@@ -777,7 +823,7 @@
         "id": "1XoTxVlsFHU3"
       },
       "source": [
-        "## 6 - Visualise tracking results\n"
+        "## 6 - Visualise results\n"
       ]
     },
     {
